# stock-digital-analysis

./: .gitignore  README.md  datadir-manifest.txt  index.html  pyproject.toml  wrangler.jsonc
.github/workflows/: publish-report.yml
scripts/: build-public-site.sh
src/stock_digital_analysis/: __init__.py  cli.py  digital_distribution.py  read_data.py
symbols/: 000721.SZ.html  300668.SZ.html  301322.SZ.html  513520.SH.html  588000.SH.html  600152.SH.html  600600.SH.html  601328.SH.html
tests/: test_digital_distribution.py  test_read_data.py
